# CppMeasurement

./: CMakeLists.txt  README.md  ScopedMeasurement.h  run_test.sh
.github/workflows/: c-cpp.yml  codeql-analysis.yml
src/: ScopedMeasurement.cpp  ScopedMeasurement.h
test/: CMakeLists.txt  ScopedMeasurementTest.cpp
